[page/moderator-panel] Scrollbar fix, added hover effect for chats.

--- a/src/index/containers/p2p/ModeratorPanel/components/Sidebar/Sidebar.module.less
+++ b/src/index/containers/p2p/ModeratorPanel/components/Sidebar/Sidebar.module.less
@@ -3,6 +3,13 @@
   flex-direction: column;
   max-width: 100%;
   height: 100%;
+
+  :global {
+    .ScrollbarTrackY {
+      right: 8px !important;
+      background: var(--alice-blue) !important;
+    }
+  }
 }
 
 :global(.adaptive) {
